apps/homerun2/components/config-viewer/route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homerun2-config-viewer
  namespace: ${HOMERUN2_NAMESPACE:-homerun2}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${HOMERUN2_CONFIG_VIEWER_HOSTNAME:-config-viewer}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homerun2-config-viewer
          port: 80
